# api-platform

./: .coderabbit.yaml  .fossa.yml  .gitignore  CLAUDE.md  Dockerfile.builder  Makefile  PYTHON_LIFECYCLE_PLAN.md  README.md  Spec.md  discussion#734.md  docker-compose.yaml  docs_map.md  envoy.yaml  feature-implementation-plan.md  go.work  go.work.sum  mistral-proxy.yaml  policies.yaml
.azure/: api-platform-sca-scan.yaml
.claude/agents/: gateway-operator-expert.md
.claude/rules/: authentication_authorization.md  error-handling.md  file-access.md  go-control-plane-xds-security.md  go-cors-validation.md  go-network-service-hardening.md  js-authentication-authorization.md  js-error-handling.md  js-file-access.md  js-output-encoding-xss.md  js-post-quantum-cryptography.md  js-ssrf-prevention.md  js-xxe-xml-processing.md  post-quantum-cryptography.md  ssrf-prevention.md  xxe-xml-processing.md
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  improvement.yml  new-feature.yml  task.yml
.github/workflows/: add_issue_labels_on_open.yml  ai-workspace-cli-e2e.yml  ai-workspace-pr-check.yml  ai-workspace-release.yaml  ai-workspace-ui-helm-release.yml  apipctl-build-test.yml  apipctl-release.yml  cli-gw-build-hourly.yml  cli-gw-build-periodic.yml  cli-gw-build.yml  cli-release.yml  codecov.yml  copilot-setup-steps.yml  dependency-validation.yml  design-done-label.yml  developer-portal-ui-helm-release.yml  devportal-integration-test.yml  devportal-release.yml  enforce-design-gate.yml  event-gateway-helm-release.yml  event-gateway-integration-test-postgres.yml  event-gateway-integration-test-sqlserver.yml  event-gateway-integration-test.yml  event-gateway-release.yml  gateway-api-conformance.yml  gateway-helm-release.yml  gateway-integration-test-postgres.yml  gateway-integration-test-sqlserver.yml  gateway-integration-test.yml  gateway-post-merge-integration-check.yml  gateway-release.yml  gateway-snapshot.yml  go-scan.yaml  jfrog-scan.yaml  k8s-gateway-api-conformance.yml  operator-helm-release.yml  operator-integration-test.yml  operator-release.yml  perf-gateway.yml  platform-api-devportal-e2e.yml  (+13 more)
api-designer/: quick-start.md
api-designer/docs/: README.md
api-designer/spec/: spec.md
api-portal/spec/: spec.md
cli/: GATEWAY_CLIENT.md  README.md
cli/docs/: README.md
common/: .gitignore  README.md  go.mod  go.sum
concepts/: api-yaml-specification.md
configs/: policy-chains.yaml
docs/: README.md  quick-start-guide.md
event-gateway/: .env.example  ARCHITECTURE.md  Makefile  README.md  WEBBROKERAPI.md  build.yaml  docker-compose-dev.yaml  docker-compose.debug.yaml  docker-compose.dev.yaml  docker-compose.test.postgres.yaml  docker-compose.test.sqlserver.yaml  docker-compose.yaml
gateway/: .gitignore  CURL_REFERENCE.md  DEBUG_GUIDE.md  Makefile  PYTHON_DEBUG_GUIDE.md  README.md  VERSION  build-lock.yaml  build-manifest.yaml  build.yaml  docker-compose-perf.yaml  docker-compose.debug.yaml  docker-compose.sqlserver.yaml  docker-compose.yaml  local.env
gateway/sample-policies/prompt-compressor/: README.md  __init__.py  policy-definition.yaml  policy.py  pyproject.toml  requirements.txt
guidelines/: DOCUMENTATION.md
httpkit/: go.mod
my-custom-gateway/: build.yaml
platform-api/: Dockerfile  Makefile  README.md  VERSION  go.mod  go.sum  oapi-codegen-eventgateway.yaml  oapi-codegen.yaml  openapi.yaml
policy-engine/: go.mod  go.sum
scripts/: next-version.sh  release.sh  update-docker-compose.sh  update-helm.sh  validate-versions.sh  verify-llm-cost.py  version-bump.sh
sdk/: go.mod  go.sum
sdk-python/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
sdk-python/src/apip_sdk_core/: __init__.py
sdk-python/src/apip_sdk_core/policy/: __init__.py
sdk-python/src/apip_sdk_core/policy/v1alpha2/: __init__.py  actions.py  policy.py  types.py
sdk-python/src/wso2_gateway_policy_sdk/: __init__.py
sdk-python/src/wso2_gateway_policy_sdk/policy/: __init__.py
sdk-python/src/wso2_gateway_policy_sdk/policy/v1alpha2/: __init__.py  actions.py  policy.py  types.py
sdk-python/tests/: __init__.py  test_public_api.py
src/: go.mod  main.go
sts/: .dockerignore  .gitignore  Dockerfile  README.md  inputs.yaml  kickstart.sh
(+5174 files in other folders)
