[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apip-sdk-core"
version = "0.1.0"
description = "Core Python SDK for API Platform gateway policies"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "WSO2", email = "architecture@wso2.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/wso2/api-platform"

[tool.hatch.build.targets.wheel]
packages = ["src/apip_sdk_core"]

[tool.hatch.build.targets.sdist]
include = [
  "src/apip_sdk_core",
  "pyproject.toml",
  "README.md",
]
