[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wso2-gateway-policy-prompt-compressor"
version = "0.1.0"
description = "WSO2 AI Gateway prompt compression policy for the Python executor"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "WSO2" }
]
dependencies = [
  "compression-prompt==0.1.0",
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[tool.setuptools]
packages = ["wso2_gateway_policy_prompt_compressor"]
include-package-data = true

[tool.setuptools.package-dir]
wso2_gateway_policy_prompt_compressor = "."

[tool.setuptools.package-data]
wso2_gateway_policy_prompt_compressor = ["policy-definition.yaml"]
